fix library endpoint (2)
