# docs/swagger.json
@@ -43,6 +43,12 @@
                         "in": "query"
                     },
                     {
+                        "type": "string",
+                        "description": "Filter by link to clip",
+                        "name": "link",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
                         "description": "Page number",
                         "name": "page",
